- Updated the table styling and sliced the amount of words visible on the notes column. - Fixed a bug with the footer being in the wrong place when adjusting site height

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,8 +15,6 @@ body {
 .container {
   margin: 0 auto;
   max-width: 1500px;
-  width: 100%;
-  height: 100%;
   padding: 20px;
 }
 
